name:                modal
version:             0.1.0.0
synopsis:            An implementation of the box modality in Haskell
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          jozefg@cmu.edu
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Box
  build-depends:       base >=4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
